--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ jinja2~=3.1.2
 openai~=1.66.3
 tenacity~=9.0.0
 tiktoken~=0.9.0
-googlesearch-python~=1.3.0
-duckduckgo_search~=7.5.3
-baidusearch~=1.0.3
+googlesearch-python>=2.0.0
+duckduckgo_search~=8.0.0
+baidusearch==1.0.3  # Если новая версия не работает
 numpy
 datasets~=3.4.1
 html2text~=2024.2.26
@@ -23,3 +23,6 @@ beautifulsoup4~=4.13.3
 httpx>=0.27.0
 tomli>=2.0.0
 mcp~=1.5.0
+uv
+playwright
+python-dotenv
