--- a/config/config.toml
+++ b/config/config.toml
@@ -4,3 +4,7 @@ base_url = "https://api.openai.com/v1 "
 api_key = "${OPENAI_API_KEY}"
 max_tokens = 4096
 temperature = 0.0
+[llm.anthropic]
+model = "claude-3"
+base_url = "https://api.anthropic.com/v1 "
+api_key = "${ANTHROPIC_API_KEY}"
